# AutoSreAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
experimental/: exp.ipynb
tools/: base.py  file.py  jira.py  oncall_employees.py  stack_exchange.py
utils/: logger.py  random_log_generator.py
