[project]
name = "sreagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.3",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.15",
    "langchain>=0.3.24",
    "loguru>=0.7.3",
    "stackapi>=0.3.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
